// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Contextual matches the snapshot when disabled 1`] = `
<SearchInput
  data-testid="search-input"
  disabled={true}
  hasIcon={true}
  label="Search"
  onChange={[Function]}
  onReset={[Function]}
  onSearch={[Function]}
/>
`;

exports[`Search Contextual matches the snapshot when enabled 1`] = `
<SearchInput
  data-testid="search-input"
  hasIcon={true}
  label="Search"
  onChange={[Function]}
  onReset={[Function]}
  onSearch={[Function]}
/>
`;
